update project name in package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "contact-manager",
-  "description": "An Aurelia client application.",
+  "name": "empowert3",
+  "description": "Jesus Is Watching",
   "version": "0.1.0",
   "repository": {
     "type": "???",
