--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "aurelia-animator-css": "^1.0.4",
     "aurelia-bootstrapper": "^2.4.0",
     "bootstrap": "^5.3.1",
+    "firebase": "^10.3.1",
     "font-awesome": "^4.7.0",
     "nprogress": "^0.2.0"
   },
